# calcium-imaging-pipeline

./: .gitignore  README.md
.github/workflows/: ci.yml
configs/: global.yaml
configs/labs/: example-lab.yaml
configs/rigs/example-lab/: rig-a.yaml
core/: pyproject.toml
core/docker/: Dockerfile  docker-compose.yml
core/qc_core/: config.py  main.py  proto_gen.py
core/qc_core/algorithms/: baseline_drift.py  bleach.py  focus_proxy.py  marker_missing.py  motion.py  onset_latency.py  saturation.py
core/qc_core/api/: routes.py
core/qc_core/ingest_gateway/: grpc_server.py  spooler.py
core/qc_core/qc_engine/: processor.py
core/qc_core/storage/: session_store.py
core/qc_core/websocket/: publisher.py
core/tests/: test_algorithms.py  test_config.py  test_processor.py
dashboard/: package-lock.json  package.json
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/components/: FindingsPanel.tsx  StatusBadge.tsx
dashboard/src/lib/: types.ts  useQCWebSocket.ts
docs/: adapter_dev_guide.md  architecture.md  c4-diagrams.md  configs.md  deployment.md  troubleshooting.md
edge-agent/: QcEdgeAgent.slnx
edge-agent/adapters/HotFolderAdapter/: HotFolderAdapter.csproj  HotFolderFrameSourceAdapter.cs
edge-agent/adapters/NisElementsAdapter/: NisElementsAdapter.csproj  NisElementsFrameSourceAdapter.cs
edge-agent/adapters/SimulatedAdapter/: SimulatedAdapter.csproj  SimulatedFrameSourceAdapter.cs
proto/: qcstream.proto
replay-testkit/: pyproject.toml
replay-testkit/fault_injector/: injector.py
replay-testkit/golden_tests/: runner.py
replay-testkit/perf_tests/: perf.py
replay-testkit/replay_server/: server.py
replay-testkit/tests/: test_fault_injector.py  test_golden.py  test_perf.py
(+13 files in other folders)
